--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/calderonsamuel/skellm
+URL: https://github.com/calderonsamuel/skellm, https://calderonsamuel.github.io/skellm/
 BugReports: https://github.com/calderonsamuel/skellm/issues
