--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/calderonsamuel/skellm, https://calderonsamuel.github.io/skellm/
 BugReports: https://github.com/calderonsamuel/skellm/issues
+Imports: 
+    magrittr,
+    rlang,
+    S7
